# agentgate-ai

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_EN.md  README_ZH.md  docker-compose.yml  eslint.config.js  index.html  lessons.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
_design/demo-header/: demo-header.html
docs/: full-reference-zh.md  full-reference.md  release-operations.md  ui-testing.md  use-claude-code-with-deepseek-zh.md  use-claude-code-with-deepseek.md  use-claude-code-with-github-copilot-zh.md  use-claude-code-with-github-copilot.md  use-codex-desktop-with-third-party-api-and-plugins-zh.md  use-codex-desktop-with-third-party-api-and-plugins.md  use-codex-with-deepseek-zh.md  use-codex-with-deepseek.md  use-codex-with-mimo-zh.md  use-codex-with-mimo.md  use-gemini-cli-with-agentgate-zh.md  use-gemini-cli-with-agentgate.md  use-opencode-with-agentgate-zh.md  use-opencode-with-agentgate.md
docs/release-notes/: 0.1.0.md  0.1.1.md  0.1.2.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.9.md  0.2.x.md  0.3.0.md  0.4.0.md  0.5.0.md  0.5.x.md  0.8.x.md  1.0.0.md  1.1.0.md  1.1.1.md  1.1.2.md  1.2.0.md  1.2.1.md  1.2.2.md  1.2.3.md  1.2.4.md  1.3.0.md  1.3.1.md  1.3.2.md  1.3.3.md  1.3.4.md  1.3.5.md  1.3.6.md  1.3.7.md  1.4.0.md  1.4.1.md  1.4.11.md  1.4.12.md  1.4.2.md  1.4.3.md  1.4.4.md  1.4.5.md  1.4.6.md  1.4.7.md  (+2 more)
packaging/homebrew/: README.md
provider-catalog/providers/: anthropic.json  baichuan.json  cerebras.json  cohere.json  copilot.json  custom_openai_compatible.json  dashscope.json  deepseek.json  fireworks.json  glm.json  google_gemini.json  groq.json  kimi.json  mimo.json  (+13 more)
scripts/: bump-version.sh  check-download-docs.mjs  check-gateway-auth.sh  codex_compact_tail.sh  extract-release-notes.mjs  generate-provider-catalog.mjs  publish-updater-json.mjs  release-preflight.sh  release-smoke.sh  sync-provider-catalog.mjs  test-chat-completions-pass-through-stream.sh  test-chat-completions-pass-through.sh  test-chat-failover-non-stream.sh  test-ci-local.sh  test-failover-non-stream.sh  test-gateway-health.sh  test-gateway-models.sh  test-integration.sh  test-playwright-smoke.mjs  test-quickstart-core.sh  test-release-local.sh  test-responses-auth-stream.sh  test-responses-non-stream.sh  test-responses-stream.sh  test-responses-tool-call-input.sh
site/: .gitignore  index.html  input.css  llms.txt  package.json  pnpm-lock.yaml  robots.txt  sitemap.xml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  pet.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  runtime.rs
src-tauri/src/app/: cc_notify.rs  commands.rs  events.rs  mod.rs  state.rs  tray.rs
src-tauri/src/app/commands/: clients.rs  config.rs  diagnostics.rs  gateway.rs  instructions_skills.rs  logs.rs  mod.rs  pet.rs  pricing.rs  providers.rs  route_profiles.rs
src-tauri/src/cli/: serve.rs
src-tauri/src/diagnostics/: checks.rs  cost_alert.rs  health_probe.rs  mod.rs  report.rs  speedtest.rs  test_failure.rs
src-tauri/src/errors/: codes.rs  mod.rs
src-tauri/src/gateway/: anthropic_model_suffix.rs  auto_compact.rs  body_decode.rs  circuit_breaker.rs  codex_compact.rs  failover.rs  metrics.rs  mod.rs  pass_through.rs  probe_latency.rs  provider_selector.rs  refiner_log.rs  route_decision.rs  routes.rs  server.rs  session_affinity.rs  session_store.rs  sse.rs  sse_anthropic.rs  sse_bootstrap.rs  sse_gemini.rs  stream_utf8.rs  usage.rs
src-tauri/src/gateway/refiners/: body_filter.rs  error_mapper.rs  mod.rs  runtime.rs  thinking_rectifier.rs
src-tauri/src/gateway/routes/: chat.rs  gemini.rs  messages.rs  meta.rs  mod.rs  responses.rs  shared.rs
src-tauri/src/gateway/routes/responses/: anthropic.rs  chat.rs  gemini.rs
src-tauri/src/models/: gateway.rs  mod.rs  pet.rs  provider.rs  request_log.rs  route_profile.rs  settings.rs
src-tauri/src/protocol/: anthropic_messages.rs  chat_completions.rs  mod.rs  openai_responses.rs  responses_events.rs
src-tauri/src/providers/: adapter.rs  capabilities.rs  copilot.rs  mod.rs
src-tauri/src/security/: local_token.rs  mod.rs  redaction.rs
src-tauri/src/session_sync/: claude.rs  codex.rs  gemini.rs  mod.rs  periodic.rs
src-tauri/src/storage/: app_settings.rs  apply_history.rs  config_backups.rs  db.rs  gateway_settings.rs  generated_provider_catalog.rs  migrations.rs  mod.rs  pet_settings.rs  pricing.rs  provider_endpoints.rs  provider_runtime_status.rs  providers.rs  recommended_mappings.rs  request_logs.rs  route_profiles.rs
src-tauri/src/storage/request_logs/: mod.rs  query.rs  stats.rs  tests.rs  write.rs
src-tauri/src/tools/: atomcode.rs  claude_code.rs  claude_desktop.rs  codex.rs  codex_restart.rs  config_verify.rs  gemini_cli.rs  instructions.rs  instructions_templates.rs  mcp.rs  mod.rs  opencode.rs  process_detect.rs  skills.rs  toml_merge.rs
src-tauri/src/transform/: anthropic_to_chat.rs  anthropic_to_chat_stream.rs  chat_to_anthropic.rs  chat_to_anthropic_stream.rs  degradation.rs  gemini_to_chat.rs  mod.rs  reasoning_store.rs  responses_to_anthropic.rs  responses_to_chat.rs  responses_to_gemini.rs  schema_cleaner.rs  thinking_blocks.rs  tool_calls.rs
src-tauri/src/transform/providers/: anthropic.rs  deepseek.rs  default.rs  gemini.rs  kimi.rs  mimo.rs  minimax.rs  mod.rs  sensenova.rs
src-tauri/src/transform/responses_to_chat/: commentary.rs  convert.rs  effort.rs  input.rs  mod.rs  tests.rs  think.rs
src-tauri/src/wake/: backend.rs  mod.rs
src-tauri/tests/: capability_fixture.rs  codex_compact_fixture.rs  copilot_upstream.rs  deepseek_capabilities.rs  kimi_capabilities.rs  mimo_capabilities.rs  protocol_fixture.rs  smoke_test.rs
src-tauri/tests/common/: gateway_harness.rs  mock_upstream.rs  mod.rs
(+190 files in other folders)
