[package]
name = "agentgate"
version = "1.2.4"
description = "Local gateway for AI coding agents"
authors = ["dengmengmian"]
edition = "2021"
default-run = "agentgate"
autobins = false

[features]
default = []
cli = []

[lib]
name = "agentgate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentgate"
path = "src/main.rs"

[[bin]]
name = "agentgate-serve"
path = "src/cli/serve.rs"
required-features = ["cli"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# gzip/brotli/zstd 让 reqwest 自动解压上游响应——若上游返回压缩 SSE 流
# （即便我们没显式发 Accept-Encoding），bytes_stream/text 拿到的是明文。
# 否则 pass-through 会把压缩字节原样转给客户端，导致 SSE 帧解析失败。
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "zstd"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
# CLI/headless 生产部署需要 TLS：用 axum-server 替代 axum::serve，
# 同时提供 HTTP / HTTPS 两条路径 + 优雅 shutdown（Handle::graceful_shutdown）。
axum-server = { version = "0.7", features = ["tls-rustls"] }
# 用于包装 axum Body 实现 active-requests 计数器（gateway/server.rs::CountingBody）。
# transitively 通过 axum/reqwest 已经在依赖图里——这里显式声明只是稳定 API。
http-body = "1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
bytes = "1"
flate2 = "1"
zstd = "0.13"
brotli = "8"
toml_edit = "0.22"
open = "5"
rand = "0.9"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2"
clap = { version = "4", features = ["derive", "env"] }
# 结构化日志：CLI/headless 用 JSON 输出到 stdout（给 journalctl / docker logs 抓）。
# GUI 模式不强制初始化。env: AGENTGATE_LOG（env-filter syntax）。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
# Prometheus metrics 暴露：GET /metrics 给监控系统抓。
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
