[package]
name = "agentgate"
version = "1.3.6"
description = "Local gateway for AI coding agents"
authors = ["dengmengmian"]
edition = "2021"
default-run = "agentgate"
autobins = false

[features]
default = []
cli = []

[lib]
name = "agentgate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentgate"
path = "src/main.rs"

[[bin]]
name = "agentgate-serve"
path = "src/cli/serve.rs"
required-features = ["cli"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
# 自动从 Rust 推导 TS 类型 + 生成 invoke 客户端,前端不再手抄 type/api。
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# gzip/brotli/zstd 让 reqwest 自动解压上游响应——若上游返回压缩 SSE 流
# （即便我们没显式发 Accept-Encoding），bytes_stream/text 拿到的是明文。
# 否则 pass-through 会把压缩字节原样转给客户端，导致 SSE 帧解析失败。
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "zstd"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
# CLI/headless 生产部署需要 TLS：用 axum-server 替代 axum::serve，
# 同时提供 HTTP / HTTPS 两条路径 + 优雅 shutdown（Handle::graceful_shutdown）。
axum-server = { version = "0.7", features = ["tls-rustls"] }
# 用于包装 axum Body 实现 active-requests 计数器（gateway/server.rs::CountingBody）。
# transitively 通过 axum/reqwest 已经在依赖图里——这里显式声明只是稳定 API。
http-body = "1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
bytes = "1"
flate2 = "1"
zstd = "0.13"
brotli = "8"
toml_edit = "0.22"
# 本地 ZIP 导入 skill 用：从内存字节解压，做 zip-slip 防护。
zip = { version = "2", default-features = false, features = ["deflate"] }
open = "5"
rand = "0.9"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2"
# Used only by Quick Setup to peek at the clipboard for a known-shaped API
# key. Read is wrapped in try/catch on the frontend so missing capability /
# permission / plugin failure is silent — never blocks the form.
tauri-plugin-clipboard-manager = "2"
clap = { version = "4", features = ["derive", "env"] }
# 结构化日志：CLI/headless 用 JSON 输出到 stdout（给 journalctl / docker logs 抓）。
# GUI 模式不强制初始化。env: AGENTGATE_LOG（env-filter syntax）。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
# Prometheus metrics 暴露：GET /metrics 给监控系统抓。
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

[dev-dependencies]
# 离线 fixture 测试用：本地起 mock 上游，断言 AgentGate 转换后的请求体。
# 不依赖真实 provider key、不依赖网络。
wiremock = "0.6"
tempfile = "3"
