[package]
name = "agentgate"
version = "1.3.7"
description = "Local gateway for AI coding agents"
authors = ["dengmengmian"]
edition = "2021"
default-run = "agentgate"
autobins = false

[features]
# desktop = 完整 Tauri 桌面 app(默认)。cli = headless agentgate-serve,
# 用 `--no-default-features --features cli` 构建,不链接 tauri / webkit。
default = ["desktop"]
cli = []
desktop = [
    "dep:tauri",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-autostart",
    "dep:tauri-specta",
    "dep:specta-typescript",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-clipboard-manager",
]

[lib]
name = "agentgate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentgate"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "agentgate-serve"
path = "src/cli/serve.rs"
required-features = ["cli"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
# 自动从 Rust 推导 TS 类型 + 生成 invoke 客户端,前端不再手抄 type/api。
specta = { version = "=2.0.0-rc.22", features = ["serde_json", "derive"] }
specta-typescript = { version = "0.0.9", optional = true }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# gzip/brotli/zstd 让 reqwest 自动解压上游响应——若上游返回压缩 SSE 流
# （即便我们没显式发 Accept-Encoding），bytes_stream/text 拿到的是明文。
# 否则 pass-through 会把压缩字节原样转给客户端，导致 SSE 帧解析失败。
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "zstd"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
# CLI/headless 生产部署需要 TLS：用 axum-server 替代 axum::serve，
# 同时提供 HTTP / HTTPS 两条路径 + 优雅 shutdown（Handle::graceful_shutdown）。
axum-server = { version = "0.7", features = ["tls-rustls"] }
# 用于包装 axum Body 实现 active-requests 计数器（gateway/server.rs::CountingBody）。
# transitively 通过 axum/reqwest 已经在依赖图里——这里显式声明只是稳定 API。
http-body = "1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
bytes = "1"
flate2 = "1"
zstd = "0.13"
brotli = "8"
# Codex remote compaction:把 summary 编码到 encrypted_content 字段(Codex 不解析,
# 只下次塞回当历史项),AgentGate 用 magic prefix + base64 让自己能可逆还原。
base64 = "0.22"
toml_edit = "0.22"
# 本地 ZIP 导入 skill 用：从内存字节解压，做 zip-slip 防护。
zip = { version = "2", default-features = false, features = ["deflate"] }
open = "5"
rand = "0.9"
tauri-plugin-updater = { version = "2.10.1", optional = true }
tauri-plugin-process = { version = "2", optional = true }
# Used only by Quick Setup to peek at the clipboard for a known-shaped API
# key. Read is wrapped in try/catch on the frontend so missing capability /
# permission / plugin failure is silent — never blocks the form.
tauri-plugin-clipboard-manager = { version = "2", optional = true }
clap = { version = "4", features = ["derive", "env"] }
# 结构化日志：CLI/headless 用 JSON 输出到 stdout（给 journalctl / docker logs 抓）。
# GUI 模式不强制初始化。env: AGENTGATE_LOG（env-filter syntax）。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
# Prometheus metrics 暴露：GET /metrics 给监控系统抓。
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
tower_governor = "0.4"

# `mobile` cfg 由 tauri-build 在 desktop 构建注入;cli 构建没有它,这里向
# rustc 声明该 cfg 名合法,消除 unexpected_cfgs 告警(Tauri 官方做法)。
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(mobile)"] }

[dev-dependencies]
# 离线 fixture 测试用：本地起 mock 上游，断言 AgentGate 转换后的请求体。
# 不依赖真实 provider key、不依赖网络。
wiremock = "0.6"
tempfile = "3"
# Codex CLI 用的同款 SSE parser,集成测试拿它解析我们返给 Codex 的 SSE,
# 验证 wire-level 真正兼容(不是只字符串断言)。
eventsource-stream = "0.2"
# env 是进程全局,动 std::env 的测试用 #[serial(env)] 互斥,替代手工合成串行测试的约定。
serial_test = "3"
